src/test/ui/typeck/typeck-default-trait-impl-constituent-types-2.stderr
error[E0277]: the trait bound `MyS2: MyTrait` is not satisfied in `(MyS2, MyS)`
  --> $DIR/typeck-default-trait-impl-constituent-types-2.rs:16:5
   |
LL |     is_mytrait::<(MyS2, MyS)>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ within `(MyS2, MyS)`, the trait `MyTrait` is not implemented for `MyS2`
   |
   = help: the following implementations were found:
             <MyS2 as MyTrait>
   = note: required because it appears within the type `(MyS2, MyS)`
note: required by `is_mytrait`
  --> $DIR/typeck-default-trait-impl-constituent-types-2.rs:11:1
   |
LL | fn is_mytrait<T: MyTrait>() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
